[FIX] account_reports: Fix menu item layout issue
Purpose
=======

When opening the 'Partner Ledger' report menuitem, there is
a display issue due to a missing class (dropdown bs4).

Before bootstrap 4, the dropdown menu managed by a left margin but after
bootstrap 4 no need to manage margin because bootstrap add inline style
to display dropdown items

Specification
=============

- dropdown-item class added to the concerned menu-item

- Remove unwanted (and now useless) css style

This commit is related to bug#1866900.

--- a/account_reports/static/src/scss/account_financial_report.scss
+++ b/account_reports/static/src/scss/account_financial_report.scss
@@ -454,11 +454,6 @@ p.o_account_reports_contact_info {
 
         .dropdown {
             display: inline-block;
-
-            ul.o_account_reports_domain_dropdown {
-                right: 0;
-                left: auto;
-            }
         }
     }
 
